--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -3,7 +3,8 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
     <title>test</title>
 </h:head>
@@ -33,14 +34,14 @@
             #{product.status}
         </h:column>
         <h:column>
-            <h:outputLink value="confirm.xhtml">Confirm
-                <f:param name="id" value="#{product.id}"/>
-            </h:outputLink>
+            <h:commandButton value="confirm" action="#{statusProductBean.confirmProduct(product.id)}">
+                <f:ajax execute="@form" render="@form"/>
+            </h:commandButton>
         </h:column>
         <h:column>
-            <h:outputLink value="reject.xhtml">reject
-                <f:param name="id" value="#{product.id}"/>
-            </h:outputLink>
+            <h:commandButton value="reject" action="#{statusProductBean.rejectProduct(product.id)}">
+                <f:ajax execute="@form" render="@form"/>
+            </h:commandButton>
         </h:column>
         <h:column>
                <h:commandButton value="delete" action="#{deleteProductBean.delProduct(product.id)}">
@@ -51,6 +52,7 @@
     </h:dataTable>
 
         <h3>form 1 datatable end</h3>
+
     </h:form>
 
     <h2>form 1 end</h2>
@@ -66,9 +68,10 @@
             <h:inputText id="productType" value="#{newProductBean.product.productType}"/>
             <!--<h:messages for="autor"/>-->
         </p>
+
         <p>
-            <h:commandButton action="#{newProductBean.createProduct}" value="Create">
-                <f:ajax render="@form" execute="@form"/>
+            <h:commandButton type="submit" action="#{newProductBean.createProduct}" value="Create">
+                <f:ajax execute="@form" render="@form"/>
             </h:commandButton>
         </p>
 
