refresh index.xhtml #1

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,7 +10,7 @@
 </h:head>
 
 <h:body>
-    <h1>start</h1>
+    <h1>Products List</h1>
     <h:form id="ListOfProducts">
         <h:dataTable id="ProductList" border="1" value="#{productListBean.product}" var="product">
             <h:column>
@@ -51,11 +51,9 @@
             </h:column>
         </h:dataTable>
 
-        <h3>form 1 datatable end</h3>
-
     </h:form>
 
-    <h2>form 1 end</h2>
+    <h2>Add Product</h2>
 
     <h:form id="AddNewProduct" >
 
@@ -74,7 +72,6 @@
             </p>
 
     </h:form>
-    <h2>Form 2 end</h2>
 </h:body>
 
 </html>
